--- a/scss/style.scss
+++ b/scss/style.scss
@@ -56,12 +56,16 @@ nav {
 	width: 100%;
 	height: 25%;
 	@media#{$pym}{
-		position:absolute;
+		position:relative;
+		width:100%;
+		background:#fff;
+		font-size:1em;
 	}
 }
 
-.clearfix{
+ul.clearfix{
 	*zoom: 1;
+	display:none;
 	&:before{
 		content: " ";
 		display: table;
@@ -89,7 +93,7 @@ header {
 	box-shadow: 0px 2px 20px $dgray;
 	@media #{$pym}{
 			width:100%;
-			top:0;
+			top:6.25em;
 			text-align: center;
 			padding:1.5em 0px;
 	}
@@ -118,8 +122,165 @@ header {
 		}
 	}	
 }
+
+/* ======== Nav Bar Menu Links ======== */
+
+#menuBar {
+	top: -8em;
+	width: 100%;
+	height: 4em;
+	vertical-align: middle;
+	z-index: -1;
+	background-color: #fff;
+	text-transform:uppercase;
+	box-shadow: 0px 0px 30px #555;
+	@media #{$pym}{
+		top:-6.25em;
+	}
+	ul {
+		list-style: none;
+		float: right;
+		position: relative;
+		display: inline-block;
+		&:after{
+			content: "";
+			clear: both;
+			display: block;
+		}
+		@media #{$pym}{
+			padding:0;
+			margin: 0 auto;
+			width: 600px;
+			height: 40px;
+		}
+		ul{
+			position: absolute;
+			top: 100%;
+			right: -75%;
+			width: 250px;
+			padding: 10px 15px;
+			background-color: #181818;
+			opacity: .9;
+			a{
+				padding: 10px 10px;
+				color: #fff;
+				&:hover{
+					background: #000;
+				}
+			}
+			li{
+				float: none;
+				border-bottom: 2px solid #fff;
+				position: relative;
+				padding-top: 5px;
+				&:last-child{
+					border: none;
+				}
+			}
+			ul{
+				background-color: #181818;
+				opacity: 1;
+				margin-top: 3.55em;
+				position: absolute;
+				left: 115%;
+				top:0;
+			}
+		}
+		
+		li {
+			float: left;
+			margin-top: 0.7em;
+			@media #{$pym}{
+				display:inline;
+				float:left;
+			}
+			a{
+				display: block;
+				padding: 10px 10px;
+				font-size:.9em;
+				&:hover{
+					display:block;
+				}
+				@media #{$pym}{
+					border-right: 1px solid $blue;
+					box-sizing: border-box;
+					-moz-box-sizing: border-box;
+					-webkit-box-sizing: border-box;
+				}
+			}
+			
+			&:hover>ul{
+				display: block;
+			}
+			&:hover>.tooltip{
+				display: block;
+			}
+			&:last-child>ul{
+				right: 0;
+				margin-right: .5em;
+			}
+		}
+		
+		
+	}
+	> ul {
+		ul {
+			display: none;
+		}
+		>li>a{
+			margin-right: 1em;
+		}
+	}
+}
+
+/* ======== 3-Column Dropdown ======== */
+
+.column {
+	width: 600px !important;
+	height: 640px;
+	ul{
+		display: block !important;
+		margin-top: 3em;
+		margin-left: -9.9em;
+		width: 180px !important;
+		position: relative;
+	}
+	>li {
+		border: none !important;
+		display: inline-table;
+		text-align: left;
+		float: left;
+		margin-left: 6.6em;
+		&:first-child {
+			margin-left: 0;
+		}
+		&:last-child {
+			margin-left: 4.6em;
+			border: 1px solid red;
+		}
+		>a:after {
+			content: "";
+			clear: both;
+			display: block;
+		}
+	}	
+}
+.column-right li {
+	border: none !important;
+}
+
+#navImage {
+	border: 1px solid red;
+	background-image: url(img/building1thumb.jpg);
+	width: 178px;
+	height: 118px;
+}
+
+#navTestimonial {
+	border: 1px solid red;
+}
 	
-/* ======== Nav Bar Block Angle ======== */
+/* ======== CSS Shapes ======== */
 
 #logoBlockAngle {
 	width: 0;
@@ -160,9 +321,17 @@ header {
 	}
 }
 
-
-
-/* ======== Nav Bar Call Block ======== */
+.tooltip {
+	display: none;
+	margin-left: 31%;
+	z-index: 15;
+	width: 0;
+	height: 0;
+	border-left: 12px solid transparent;
+	border-right: 12px solid transparent;
+	border-bottom: 10px solid #181818;
+	opacity: .9;
+}
 
 #callBlock {
 	float: right;
@@ -187,109 +356,6 @@ header {
 		font-size: 1.1em;
 		letter-spacing: 1px;
 	}
-}
-
-/* ======== Nav Bar Menu Links ======== */
-
-#menuBar {
-	top: -8em;
-	width: 100%;
-	height: 4em;
-	vertical-align: middle;
-	z-index: -1;
-	background-color: #fff;
-	text-transform:uppercase;
-	box-shadow: 0px 0px 30px #555;
-	ul {
-		list-style: none;
-		float: right;
-		position: relative;
-		display: inline-table;
-		&:after{
-			content: "";
-			clear: both;
-			display: block;
-		}
-		ul{
-			position: absolute;
-			top: 100%;
-			right: -75%;
-			width: 250px;
-			padding: 10px 15px;
-			background-color: #181818;
-			opacity: .9;
-			a{
-				padding: 10px 10px;
-				color: #fff;
-				&:hover{
-					background: #000;
-				}
-			}
-			li{
-				float: none;
-				border-bottom: 2px solid #fff;
-				position: relative;
-				padding-top: 5px;
-				&:last-child{
-					border: none;
-				}
-			}
-			ul{
-				background-color: #181818;
-				opacity: 1;
-				margin-top: 3.55em;
-				position: absolute;
-				left: 115%;
-				top:0;
-			}
-		}
-		
-		li {
-			float: left;
-			margin-top: 0.7em;
-			a{
-				display: block;
-				padding: 10px 10px;
-				font-size:.9em;
-				&:hover{
-					display:block;
-				}
-			}
-			
-			&:hover>ul{
-				display: block;
-			}
-			&:hover>.tooltip{
-				display: block;
-			}
-			&:last-child>ul{
-				right: 0;
-				margin-right: .5em;
-			}
-		}
-		
-		
-	}
-	> ul {
-		ul {
-			display: none;
-		}
-		>li>a{
-			margin-right: 1em;
-		}
-	}
-}
-	
-.tooltip {
-	display: none;
-	margin-left: 31%;
-	z-index: 15;
-	width: 0;
-	height: 0;
-	border-left: 12px solid transparent;
-	border-right: 12px solid transparent;
-	border-bottom: 10px solid #181818;
-	opacity: .9;
 }
 
 /* ======== 3-Column Dropdown ======== */
