--- a/scss/style.scss
+++ b/scss/style.scss
@@ -56,10 +56,11 @@ nav {
 	width: 100%;
 	height: 25%;
 	@media#{$pym}{
-		position:relative;
+		height:128px;
 		width:100%;
 		background:#fff;
 		font-size:1em;
+		position:relative;
 	}
 }
 
@@ -93,9 +94,10 @@ header {
 	box-shadow: 0px 2px 20px $dgray;
 	@media #{$pym}{
 			width:100%;
-			top:6.25em;
+			top:0;
 			text-align: center;
 			padding:1.5em 0px;
+			height:auto;
 	}
 	img.kriLogo {
 		position: relative;
@@ -109,9 +111,11 @@ header {
 		}
 	}
 	#pull{
-		position: absolute;
-		right: 10%;
-		top: 2.75em;
+		position: relative;
+		right: -30%;
+		top: 0;
+		height:30px;
+		width:30px;
 		@media #{$barton}{
 			display:none;
 		}
@@ -135,9 +139,10 @@ header {
 	text-transform:uppercase;
 	box-shadow: 0px 0px 30px #555;
 	@media #{$pym}{
-		top:-6.25em;
+		top:0px;
+		height: auto;
 	}
-	ul {
+	#menu {
 		list-style: none;
 		float: right;
 		position: relative;
@@ -150,8 +155,50 @@ header {
 		@media #{$pym}{
 			padding:0;
 			margin: 0 auto;
-			width: 600px;
-			height: 40px;
+			display:none;
+			width:100%;
+			height:auto;
+		}
+		li {
+			float: left;
+			margin-top: 0.7em;
+			@media #{$pym}{
+				margin: 0 auto;
+				display:block;
+				width:100%;
+				position:relative;
+				background: #fff;
+			}
+			&:hover>ul{
+				display: block;
+				@media#{$pym}{
+					display:none;
+				}
+			}
+			&:hover>.tooltip{
+				display: block;
+				@media#{$pym}{
+					display:none;
+				}
+			}
+			&:last-child>ul{
+				right: 0;
+				margin-right: .5em;
+			}
+			a{
+				display:block;
+				padding: 10px 10px;
+				font-size:.9em;
+				@media#{$pym}{
+					display:inline-block;
+					width:100%;
+					text-align: left;
+					text-decoration: none;
+					line-height:40px;
+					text-indent: 35px;
+				}
+			}
+			
 		}
 		ul{
 			position: absolute;
@@ -161,6 +208,7 @@ header {
 			padding: 10px 15px;
 			background-color: #181818;
 			opacity: .9;
+			text-align: center;
 			a{
 				padding: 10px 10px;
 				color: #fff;
@@ -175,6 +223,12 @@ header {
 				padding-top: 5px;
 				&:last-child{
 					border: none;
+					}
+				@media#{$pym}{
+						display:inline-block;
+						position:static;
+						top:5em;
+						z-index:999;
 				}
 			}
 			ul{
@@ -184,40 +238,6 @@ header {
 				position: absolute;
 				left: 115%;
 				top:0;
-			}
-		}
-		
-		li {
-			float: left;
-			margin-top: 0.7em;
-			@media #{$pym}{
-				display:inline;
-				float:left;
-			}
-			a{
-				display: block;
-				padding: 10px 10px;
-				font-size:.9em;
-				&:hover{
-					display:block;
-				}
-				@media #{$pym}{
-					border-right: 1px solid $blue;
-					box-sizing: border-box;
-					-moz-box-sizing: border-box;
-					-webkit-box-sizing: border-box;
-				}
-			}
-			
-			&:hover>ul{
-				display: block;
-			}
-			&:hover>.tooltip{
-				display: block;
-			}
-			&:last-child>ul{
-				right: 0;
-				margin-right: .5em;
 			}
 		}
 		
@@ -437,6 +457,9 @@ article {
 	padding-bottom: 5em;
 	width: 100%;
 	text-align: center;
+	@media#{$pym}{
+		margin: 0;
+	}
 	h3 {
 		margin:2em 0 2em 1em;
 		font-size: $h-three;
