--- a/style.css
+++ b/style.css
@@ -296,6 +296,14 @@ a {
   a:hover {
     color: #30549d; }
 
+hr {
+  border: 0;
+  height: 1px;
+  background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+  background-image: -moz-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+  background-image: -ms-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+  background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0)); }
+
 /* ======== Top Nav Bar ======== */
 nav {
   position: fixed;
@@ -695,6 +703,26 @@ article {
     -moz-border-radius: 5px;
     border-radius: 5px;
     display: none; }
+
+/* ======== Team Page ======== */
+.emp_team .emp {
+  width: 100%; }
+  .emp_team .emp > p {
+    visibility: hidden;
+    display: none; }
+  .emp_team .emp img {
+    width: 30%;
+    height: auto;
+    float: left; }
+  .emp_team .emp .description {
+    width: 65%;
+    float: right; }
+    .emp_team .emp .description p {
+      width: 100%; }
+  .emp_team .emp:after {
+    content: "";
+    clear: both;
+    display: block; }
 
 /* ======== Blockquotes ======== */
 blockquote {
