--- a/scss/style.scss
+++ b/scss/style.scss
@@ -283,6 +283,9 @@ header {
 		margin-left: -10em;
 		width: 180px !important;
 		position: relative;
+		@media #{$pym}{
+			margin:0;
+		}
 	}
 	>li {
 		border: none !important;
@@ -421,7 +424,7 @@ header {
 		height:200px;
 	}
 	@media #{$rogers}{
-		height:700px;
+		height:500px;
 	}
 }
 
@@ -434,12 +437,12 @@ article {
 		margin: 0;
 	}
 	h3 {
-		margin:2em 0 2em 1em;
+		margin:1em auto;
 		font-size: $h-three;
 		color:#1c3b70;
 		text-align: left;
 		@media#{$barton}{
-			margin-left:4em;
+			margin-left:0;
 		}
 		&:nth-of-type(3){
 			display:none;
@@ -448,6 +451,9 @@ article {
 				margin: 0 0 2em 0;
 			}
 		}
+	}
+	h1{
+		margin: 0 0 1em 1em;
 	}
 	li{
 		list-style: square;
@@ -469,17 +475,50 @@ article {
 		width:100%;
 		p{
 			width:90%;
-			margin: 0 auto 1em auto;
+			margin: 2em auto;
 			text-align:left;
 		}
+		img{
+			vertical-align:top;
+			width:30%;
+			margin:1em 1.3%;
+			height:auto;
+			@media #{$pym}{
+				width:90%;
+				margin:.5em auto;
+				
+			}
+		}
+		
+		.awards{
+			width: 30%;
+			height:auto;
+			display:inline-block;
+			@media #{$pym}{
+				width:90%;
+				margin:.5em auto;
+			}
+
+			h1{
+				display:none;
+				}
+			img{
+				width:100%;
+				height:auto;
+			}
+		}
+
 		@media#{$barton}{
 			padding: 2% 8%;
 			margin: auto;
 			box-shadow: 0px 2px 20px $dgray;
 			text-align: left;
 			width:65%;
-			p, ul{
+			p{
 				margin: 0 auto 2em auto;
+			}
+			ul{
+				margin: 2em auto;
 			}
 		}
 		@media #{$rogers}{
@@ -487,6 +526,10 @@ article {
 			width:50%;
 		}
 	}
+}
+
+footer{
+	display:none;
 }
 
 .post-edit-link{
@@ -642,7 +685,8 @@ form{
 		text-align: center;
 		margin-left:0;
 	}
-	@media #{$barton}{
+	/*
+@media #{$barton}{
 		width:60%;
 		margin: 4em auto;
 		padding: 2% 5% 5% 5%;
@@ -654,6 +698,7 @@ form{
 	@media #{$rogers}{
 		width:50%;
 	}
+*/
 	input, select{
 		margin: 10px auto;
 	}
