--- a/scss/style.scss
+++ b/scss/style.scss
@@ -453,6 +453,9 @@ article {
 		@media#{$barton}{
 			margin-left:0;
 		}
+		@media#{$pym}{
+			text-align: center;
+		}
 		&:nth-of-type(3){
 			display:none;
 			@media #{$barton}{
@@ -462,7 +465,13 @@ article {
 		}
 	}
 	h1{
-		margin: 0 0 1em 1em;
+		margin: 1em auto 1.5em auto;
+		text-align: center;
+		@media#{$barton}{
+			margin: 0 0 1em 1em;
+			text-indent: 1em;
+			text-align: left;
+		}
 	}
 	li{
 		list-style: square;
@@ -486,6 +495,11 @@ article {
 			width:90%;
 			margin: 2em auto;
 			text-align:left;
+			/*
+@media#{$barton}{
+				text-indent: 1em;
+			}
+*/
 		}
 		img{
 			vertical-align:top;
